--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        
+         "php": "^7.3||^8.1.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
+        "laravel/jetstream": "1.6",
         "laravel/tinker": "^2.0",
         "livewire/livewire": "^2.11"
     },
@@ -26,7 +28,8 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "platform-check": false
     },
     "extra": {
         "laravel": {
