--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,13 @@
     ],
     "license": "MIT",
     "require": {
-        
-         "php": "^7.3||^8.1.0",
+        "php": "^7.3||^8.1.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/jetstream": "1.6",
+        "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.0",
         "livewire/livewire": "^2.11"
     },
